syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  no_default_values_in_constructor: true
  package_name: "io.iohk.atala.iris.proto"
};

message IssueCredentialsBatch {
  string issuerDid = 1;
  bytes merkleRoot = 2;
}

message RevokeCredentials {
  string revokerDid = 1;
  bytes issuanceBatchDigest = 2;
  repeated bytes credentialsToRevoke = 3;
}
